van m4-5 naar 5 veranderd voor  tabs=detail positi

--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -94,7 +94,7 @@
 </div>  {# Sluit de m4-5 van hieroven voor de gerecht details#}
 <!-- tabladen: -->
 
-<div class="detail-width m-4-5">     {# opent een nieuwe m4-5 voor de tabs#}
+<div class="detail-width m-5">     {# opent een nieuwe m4-5 voor de tabs#}
 <!-- Tab buttons -->
 <div class="row background-white">
 
