Footer kleur aangepast

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -113,6 +113,10 @@ h3, h4, h5 {
     background-color: #e85d04;
 }
 
+.background-lighter-orange {
+    background-color: #fca01f;
+}
+
 .custom-shadow {
     box-shadow: 3px 3px 20px 10px rgba(120, 117, 119, 0.2);
     /* alt box-shadow: 1px 1px 20px 5px rgba(120, 117, 119, 0.9); */
