--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -97,7 +97,7 @@
 
 
     {# 3de en laatste row met de footer --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- #}
-    <div class="row" style="height: 400px">
+    <div class="row footer-height">
         <div class="col-md-2 background-lighter-orange pt-5 pl-5">
             <img src="assets/img/verrukkulluk-pay-off.png" class="logos-xxl"/> 
         </div>
