met sterretjes op de detail pagina

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -82,6 +82,18 @@ h3, h4, h5 {
     text-decoration: none;
 }
 
+/* sterretjes */
+.star {
+    font-size: 30px;
+    color: #000;
+    cursor: poiner;
+    width: 50px;
+}
+
+.star:hover {
+    color: #F00;
+}
+
 /* Colors ------------------------------------------------------------------------------------------- */
 
 .green {
