--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -33,9 +33,15 @@
                 }) // eindigd eerdere sterren worden rood functie
 
                 $.ajax({                                                // Let op hier met de $ dat deze erbij moet!
-                url: "index.php",
+                url: "index.php?gerecht_id={{data.0.gerecht.id}}&action=addrating&rating=",
                 method: "GET",
-                data: {gerecht_id:{{data.0.gerecht.id}}, rating:value, action:"addrating"}
+                // data: {gerecht_id:{{data.0.gerecht.id}}, rating:value, action:"addrating"}
+                /*
+                success: function(response) {
+                    console.log('SUCCESS BLOCK');
+                    console.log(response);
+                }
+                */
                 
                 
                 }) // eindigd ajax functie
