--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,13 +85,17 @@ h3, h4, h5 {
 /* sterretjes */
 .star {
     font-size: 30px;
-    color: #000;
+    /* color: #000; */
     cursor: poiner;
     width: 50px;
 }
 
 .star:hover {
     color: #F00;
+}
+
+.four-star{
+    
 }
 
 /* Colors ------------------------------------------------------------------------------------------- */
