--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -48,7 +48,7 @@
                 <h2> {{ record.gerecht.titel }} </h2>
             </div> {# Einde titel div #}
             <div class="col-md-6"> 
-                <h3> **** </h3> 
+                <h3> {{ record.rating}} </h3> 
             </div> 
         </div> {# einde class row voor de titel en sterren #}
 
@@ -91,5 +91,8 @@
         {{ dump(data) }}
     </pre>
     -->
+
+    <pre>
+    {{ dump(data) }}
 
 {% endblock %}
