--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -121,9 +121,9 @@ document.getElementById("defaultOpen").click();
                             <span id="2">
                                 <span id="1">
                                     <span class="star" data-value="1">*</span> {# if functie + class green om dit werkende te krijgen #}
-                                </span>
+                                </span> {# 1 ster span #}
                                 <span class="star" data-value="2">*</span>
-                            </span>
+                            </span> {# 2 ster span #}
                             <span class="star" data-value="3">*</span>
                         </span> {# 3 ster span #}
                         <span class="star" data-value="4">*</span>
