--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -32,7 +32,7 @@
             } else if ("{{data.0.rating}}" <= 5) {
               var element = document.getElementById(5);
               element.classList.add("green");
-            }
+            } else {}
 
 
             $(".star").click(function() {
