--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -45,7 +45,7 @@
             } else if ("{{record.rating}}" <= 5) {
               var element = document.getElementById(5);
               element.classList.add("green");
-            }
+            } else {}
     </script>
 
     
