--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -24,7 +24,7 @@
 <body>
 
 
-<div class="container-fluid"  style="width: 1700px">
+<div class="container-fluid wit-ruimte">
 
     {# 1ste row met de header 12 -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- #}
     <div class="mb-4">
