--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -18,6 +18,20 @@
                 slides: mySlides
             }) // Einde background-image functie
 
+
+
+/*
+            $('.star').each( (index, elem) => {
+                //console.log(index);
+       
+              const rating = {{data.1.rating}}
+              const itemValue = $(elem).attr('data-value')
+              if(itemValue <= rating) {
+                $(elem).addClass('green')
+              }
+            })
+*/
+
         }) // Einde .ready functie
     </script>
 
@@ -29,25 +43,19 @@
 {#voor spacing later toe te voegen mogelijk gebruijken: https://getbootstrap.com/docs/4.0/utilities/spacing/ #}
 {% block content %}
     {% for record in data %}    {# Deze loopt door de gehele data ($gerechten array) heen. #}
-    <script>
-              if ("{{record.rating}}" <=1) {
-              var element = document.getElementById(1);
-              element.classList.add("green");
-            } else if ("{{record.rating}}" <= 2) {
-              var element = document.getElementById(2);
-              element.classList.add("green");
-            } else if ("{{record.rating}}" <= 3) {
-              var element = document.getElementById(3);
-              element.classList.add("green");
-            } else if ("{{record.rating}}" <= 4) {
-              var element = document.getElementById(4);
-              element.classList.add("green");
-            } else if ("{{record.rating}}" <= 5) {
-              var element = document.getElementById(5);
-              element.classList.add("green");
-            } else {}
-    </script>
-
+        <script>
+            $(document).ready( function() {
+                $('.star-{{record.gerecht.id}}').each( (index, elem) => {
+                    //console.log(index);
+        
+                const rating = {{record.rating}}
+                const itemValue = $(elem).attr('data-value')
+                if(itemValue <= rating) {
+                    $(elem).addClass('green')
+                }
+            })
+        }) // Einde .ready functie
+        </script>
     
     {# Hier starten de 4 grijze achtergrond hokjes #}
     <div class="col-md-6">      {# Hier maken we een nieuwe bootstrap opdeling binnen content iedere 6 #}
@@ -68,21 +76,11 @@
             </div> {# Einde titel div #}
             <div class="col-md-6"> 
                 <h3> 
-                    <span id="5">
-                        <span id="4">
-                            <span id="3">
-                                <span id="2">
-                                    <span id="1">
-                                        <span class="star" data-value="1">*</span> {# if functie + class green om dit werkende te krijgen #}
-                                    </span> {# 1 ster span #}
-                                    <span class="star" data-value="2">*</span>
-                                </span> {# 2 ster span #}
-                                <span class="star" data-value="3">*</span>
-                            </span> {# 3 ster span #}
-                            <span class="star" data-value="4">*</span>
-                        </span> {# 4 ster span #}
-                        <span class="star" data-value="5">*</span>
-                    </span> {# 5 ster span #}
+                    <span class="star-{{record.gerecht.id}}" data-value="1">*</span> {# if functie + class green om dit werkende te krijgen #}
+                    <span class="star-{{record.gerecht.id}}" data-value="2">*</span>      {# Dit heeft een rode hover door de CSS mogelijk een nieuwe star voor de homepage maken #}
+                    <span class="star-{{record.gerecht.id}}" data-value="3">*</span>
+                    <span class="star-{{record.gerecht.id}}" data-value="4">*</span>
+                    <span class="star-{{record.gerecht.id}}" data-value="5">*</span>
                 </h3>
             </div> 
         </div> {# einde class row voor de titel en sterren #}
