--- a/templates/boodschappen.html.twig
+++ b/templates/boodschappen.html.twig
@@ -58,7 +58,7 @@ document.getElementById("defaultOpen").click();
                 </div> {# Einde div md-7 #}
                 <div class="col-md-1 green">
                 <div class="row" style="border: 1px solid">
-                    {{record.boodschappen.aantal}}
+                    <div class="" style="text-align:center"> {{record.boodschappen.aantal}} </div>
                 </div>
                 </div>
                 <div class="col-md-2">                                                                                      {# maak hier een md-1-5 aan #}
