col-md-1-5 toegevoegd

--- a/templates/boodschappen.html.twig
+++ b/templates/boodschappen.html.twig
@@ -57,11 +57,11 @@ document.getElementById("defaultOpen").click();
                     <div> {{record.artikel.omschrijving}} </div>
                 </div> {# Einde div md-7 #}
                 <div class="col-md-1 green">
-                <div class="row" style="border: 1px solid">
-                    <div class="" style="text-align:center"> {{record.boodschappen.aantal}} </div>
+                <div class="row aantal-border">
+                    <div class="text-align-center"> {{record.boodschappen.aantal}} </div>
                 </div>
                 </div>
-                <div class="col-md-2">                                                                                      {# maak hier een md-1-5 aan #}
+                <div class="col-md-1 col-md-1-2">                                                                                      {# maak hier een md-1-5 aan #}
                     <i class="fa fa-euro-sign fa-lg light-red"></i>  <span class="h8"> {{record.prijzen}}  </span>
                 </div>
                 <div class="col-md-1">
