--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -169,6 +169,9 @@ h3, h4, h5 {
     justify-content: center;
 }
 
+.text-align-center {
+    text-align:center
+}
 
 /** HTML / BODY **/
 html, body {
@@ -284,12 +287,21 @@ html, body {
     display: table-cell;
 }
 
+.col-md-1-2 {
+    width: 12.5%;
+}
+
+
 .m-4-5 {
     margin: 2rem !important;
   }
 
 .mb-4-5-x2 {
     margin-bottom: 4rem !important;
+}
+
+.aantal-border {
+    border: 1px solid
 }
 
 /* Width & Heights */
