--- a/templates/boodschappen.html.twig
+++ b/templates/boodschappen.html.twig
@@ -46,13 +46,13 @@ document.getElementById("defaultOpen").click();
 
     {# Boodschappen content #}
 
-    <div class="row" style="height:1000px; overflow-y: scroll;">
+    <div class="row boodschappen-style">
             {% for record in data %}
             <div class="row ml-1 mt-4";>
                 <div class="col-md-1" 
                     style="background-image: url('assets/img/artikelen/{{record.artikel.afbeelding}}'); background-position: center; background-size: cover; height: 125px; width: 125px"> 
                 </div>
-                <div class="col-md-5" style="max-width: 500px">
+                <div class="col-md-5-6" style="max-width: 500px">
                     <h2 style="color: #6e8722"> {{record.artikel.naam}} </h2>
                     <div> {{record.artikel.omschrijving}} </div>
                 </div> {# Einde div md-7 #}
@@ -75,16 +75,14 @@ document.getElementById("defaultOpen").click();
     </div>
 
     {# Totaal #}
-    <div class="row mt-3 ml-1">
-        <div class="col-md-7">
+    <div class="row mt-3">
+        <div class="col-md-6-7">
             <h1 class="red"> Totaal </h1>
         </div>
-        <div class="col-md-2 ml-4">
+        <div class="col-md-2">
             <i class="fa fa-euro-sign fa-lg light-red"></i>  <span class="h8"> {{totaalprijs}} </span>
         </div>
-        <div class="col-md-1">
-        </div>
-        <div class="col-md-1">
+        <div class="col-md-1 ml-4-5">
             <i class="fa fa-trash fa-lg light-red"></i>
         </div>
 
