basic main menu dropdown

--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -29,6 +29,15 @@
     {# 1ste row met de header 12 -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- #}
     <div class="mb-4">
     <div id="background-image"  class="pl-5 pt-4" style="height: 700px"> 
+    
+        <div class="menu">
+            <div class="menu-trigger">
+                <div class="dropdown">
+                    <div> Menu goes here! </div>
+                </div> {# Dropdown #}
+            </div> {# menu-trigger #}
+        </div> {# menu #}
+
         <a href="http://localhost/educom-verrukkulluk-1668679088/index.php"> <img src="assets/img/logo-v2.png" style="height: 250px; width: auto"/> </a>         {# Dit gedeelte voegt het logo toe met eenlink naar de homepage#}
         {% block header %}
         {% endblock %}   
