--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -277,6 +277,40 @@ html, body {
   scrollbar-width: none;  /* Firefox */
 }
 
+/* Main Menu dropdown */
+.menu {
+    position: absolute;
+    top: 20px;
+    right: 50px;
+}
+
+.menu-trigger {
+    background-color: #F00;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    transition: all 0.4 ease;
+    z-index: 5000 !important;
+}
+
+.menu-trigger:hover {
+    background-color: #fff000;
+}
+
+.menu-trigger:hover .dropdown {
+    top: 0px;
+}
+
+.dropdown {
+    position: fixed;
+    top:-400px;
+    left: 0;
+    right: 0;
+    height: 200px;
+    background-color: #FDF;
+    transition: all 0.4s ease;
+    padding: 40px;
+}
 
 .col-container {
     display: table;
