boodschappenlijst aan homepage toegevoegd

--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -33,7 +33,7 @@
         <div class="menu">
             <div class="menu-trigger">
                 <div class="dropdown">
-                    <div> Menu goes here! </div>
+                    <a href="http://localhost/educom-verrukkulluk-1668679088/index.php?action=ophalen_boodschappen"><h1> Mijn Boodschappenlijst </h1> </a>
                 </div> {# Dropdown #}
             </div> {# menu-trigger #}
         </div> {# menu #}
