Hamburger menu icon toegevoegd

--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -31,7 +31,7 @@
     <div id="background-image"  class="pl-5 pt-4" style="height: 700px"> 
     
         <div class="menu">
-            <div class="menu-trigger">
+            <div class="menu-trigger"> <i class="fa fa-bars fa-4x"> </i>
                 <div class="dropdown">
                     <a href="http://localhost/educom-verrukkulluk-1668679088/index.php?action=ophalen_boodschappen"><h1> Mijn Boodschappenlijst </h1> </a>
                 </div> {# Dropdown #}
