--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -285,7 +285,8 @@ html, body {
 }
 
 .menu-trigger {
-    background-color: #F00;
+    /* background-color: #F00; */
+    color: #fca01f;
     width: 40px;
     height: 40px;
     cursor: pointer;
@@ -294,7 +295,7 @@ html, body {
 }
 
 .menu-trigger:hover {
-    background-color: #fff000;
+    /* background-color: #fff000; */
 }
 
 .menu-trigger:hover .dropdown {
