--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -138,7 +138,7 @@ document.getElementById("defaultOpen").click();
     {# op lijst en favorieten knop #}
     <div class="row">
         <div class="col-md-11">
-            <a href="http://localhost/educom-verrukkulluk-1668679088/index.php?gerecht_id=2&action=detail"  style="text-decoration: none"> <div id="smullen" class="smullen_button" style> Op lijst </div> </a>
+            <a href="http://localhost/educom-verrukkulluk-1668679088/index.php?gerecht_id={{data.0.gerecht.id}}&action=add_boodschappen"  style="text-decoration: none"> <div id="smullen" class="smullen_button" style> Op lijst </div> </a>
         </div>
         <div class="col-md-1">
             <i class="fa fa-heart fa-2x"></i>
